fixed testimonial alignment

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container {
-    width: 70%;
+    width: 80%;
     padding: 1rem;
     background-color: #fff;
 }
@@ -86,6 +86,7 @@ body {
 
 .testimonial-info {
     display: grid;
+    grid-gap: 10px;
     grid-template-areas: 
     "img name"
     "img verified";
@@ -106,6 +107,7 @@ body {
 .testimonial-name {
     grid-area: name;
     margin: 0;
+    width: 80%;
 }
 
 .testimonial-verified {
@@ -113,6 +115,7 @@ body {
     grid-area: verified;
     margin-bottom: 0;
     margin-top: .2em;
+    width: 80%;
 }
 
 @media only screen and (min-width: 600px) {
